<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_registration"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="60dp"
    android:paddingStart="20dp"
    android:paddingEnd="@dimen/relative_layout_padding_start_end"
    android:background="@drawable/background_input">

        <!--<ImageView-->
            <!--android:id="@+id/button_back"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/ic_back_next"-->
            <!--android:rotation="180"-->
            <!--android:paddingBottom="5dp"-->
            <!--/>-->
        <TextView
            android:id="@+id/registrationHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:textColor="@color/hint"
            android:textStyle="normal|bold" />

    <FrameLayout
        android:id="@+id/contentRegisterStep"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/registrationHeader"
        android:layout_above="@+id/button_next_step_registration">
    </FrameLayout>

    <ImageView
        android:id="@+id/button_next_step_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/button_gradient"
        android:layout_above="@+id/infoRegistration"/>
    <TextView
        android:id="@+id/text_view_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_next_step_registration"
        android:layout_alignTop="@+id/button_next_step_registration"
        android:layout_alignRight="@+id/button_next_step_registration"
        android:layout_alignBottom="@+id/button_next_step_registration"
        android:gravity="center"
        android:text="@string/registration_next"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        android:textColor="@color/hint"
        android:textStyle="normal|bold" />

    <LinearLayout
        android:id="@+id/infoRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/input_screen_bt_margin_bottom"
        android:gravity="center">
        <TextView
            android:text="@string/rules_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_login"
            android:textColor="@color/hint"
            android:textSize="11sp"/>
        <TextView
            android:id="@+id/button_rules"
            android:text="@string/rules_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hint"
            android:layout_marginStart="5dp"
            android:textSize="11sp"/>
        <TextView
            android:text="@string/rules_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hint"
            android:layout_marginStart="5dp"
            android:textSize="11sp"/>
    </LinearLayout>
</RelativeLayout>