<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_registration_screen"
        android:layout_above="@+id/center_layout"
        android:text="@string/your_password"
        android:theme="@style/TextViewRegistrationScreen"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/center_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/edit_text_registration_screen_top"
        android:theme="@style/MyTextLabel">
        <EditText
            android:id="@+id/user_first_password_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_password"
            android:maxLength="50"
            android:inputType="textPassword"
            android:textColor="@color/Teal_50" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center_layout"
        android:background="@drawable/edit_text_registration_screen_bottom"
        android:theme="@style/MyTextLabel">
        <EditText
            android:id="@+id/user_second_password_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_user_password"
            android:maxLength="50"
            android:inputType="textPassword"
            android:textColor="@color/Teal_50" />
    </android.support.design.widget.TextInputLayout>
</RelativeLayout>