<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@android:color/darker_gray">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_name_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/center"
        android:layout_marginBottom="20dp"
        android:theme="@style/MyTextLabel">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:maxLength="24"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:textColor="@color/hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:theme="@style/MyTextLabel">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_password"
        android:maxLength="25"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:textColor="@color/hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/center"
        android:theme="@style/MyTextLabel">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_user_password"
            android:maxLength="25"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:textColor="@color/hint" />
    </android.support.design.widget.TextInputLayout>
</RelativeLayout>