<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:background="@drawable/background_input">
    <ImageView
        android:id="@+id/logo_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:src="@drawable/logo_input"
        android:layout_marginStart="@dimen/input_screen_img_margin_start_end"
        android:layout_marginEnd="@dimen/input_screen_img_margin_start_end"
        android:layout_marginTop="@dimen/input_screen_img_margin_top"
        android:layout_marginBottom="@dimen/input_screen_img_margin_bottom"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_layout_user_name"
        android:layout_marginStart="@dimen/input_screen_tv_margin_start_end"
        android:layout_marginEnd="@dimen/input_screen_tv_margin_start_end"
        android:layout_marginBottom="@dimen/input_screen_tv_margin_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_input"
        android:theme="@style/MyTextLabel"
        >
        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:gravity="center"
            android:maxLength="12"
            android:inputType="phone"
            android:textColor="@color/hint" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginStart="@dimen/input_screen_tv_margin_start_end"
        android:layout_marginEnd="@dimen/input_screen_tv_margin_start_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_layout_user_name"
        android:theme="@style/MyTextLabel">
        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_password"
            android:gravity="center"
            android:inputType="textPassword"
            android:textColor="@color/hint" />
    </android.support.design.widget.TextInputLayout>

<!--    <Button
        android:id="@+id/button_login"
        android:layout_marginStart="@dimen/margin_login_screen"
        android:layout_marginEnd="@dimen/margin_login_screen"
        android:layout_marginTop="90dp"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_password"
        android:background="@drawable/button_login"
        android:onClick="onClickAuthorizationActivity" />-->
    <ImageView
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/input_screen_bt_margin_start_end"
        android:layout_marginEnd="@dimen/input_screen_bt_margin_start_end"
        android:adjustViewBounds="true"
        android:layout_above="@+id/infoRegistration"
        android:src="@drawable/button_shape"
        android:onClick="onClickAuthorizationActivity"
        />

    <TextView
        android:id="@+id/post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_login"
        android:layout_alignTop="@+id/button_login"
        android:layout_alignRight="@+id/button_login"
        android:layout_alignBottom="@+id/button_login"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textStyle="normal|bold" />

    <LinearLayout
        android:id="@+id/infoRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/input_screen_bt_margin_bottom"
        android:gravity="center">
        <TextView
            android:id="@+id/non_account"
            android:text="@string/non_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_login"
            android:textColor="@color/hint" />
        <TextView
            android:id="@+id/tv_registration"
            android:text="@string/registration_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hint"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
</RelativeLayout>






